--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:name="br.com.wesjon.compose_view.ComposeAppFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
+                                             android:name="br.com.wesjon.compose_view.ComposeAppFragment"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent" />
