--- a/compose-app/src/main/res/layout/fragment_compose_app.xml
+++ b/compose-app/src/main/res/layout/fragment_compose_app.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/frag_container"
     android:name="androidx.navigation.fragment.NavHostFragment"
     android:layout_width="match_parent"
-    android:id="@+id/frag_container"
     android:layout_height="match_parent"
-    app:navGraph="@navigation/compose_navigation_graph"
-    app:defaultNavHost="true" />
+    app:defaultNavHost="true"
+    app:navGraph="@navigation/compose_navigation_graph" />
